fix: scientific icon align in forecast list

--- a/css/harerun.css
+++ b/css/harerun.css
@@ -295,7 +295,7 @@ button > * {
 }
 
 .time-row a > * {
-    vertical-align: bottom;
+    vertical-align: top;
     display: inline-block;
     bottom: 0;
 }
